make compile with java 11